--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -82,7 +82,7 @@
         android:contentDescription="@string/title_desc"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="edit menu"
+        android:text="@string/settingsTitle"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -161,7 +161,7 @@
         android:layout_height="21dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="thunder"
+        android:text="@string/thunder"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -178,7 +178,7 @@
         android:layout_height="21dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="traffic"
+        android:text="@string/traffic"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -195,7 +195,7 @@
         android:layout_height="21dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="birds"
+        android:text="@string/birds"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -213,7 +213,7 @@
         android:layout_height="21dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="cafe"
+        android:text="@string/cafe"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -231,7 +231,7 @@
         android:layout_height="21dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="clock"
+        android:text="@string/clock"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -249,7 +249,7 @@
         android:layout_height="21dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="stream"
+        android:text="@string/stream"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -266,7 +266,7 @@
         android:layout_height="21dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="cicadas"
+        android:text="@string/cicadas"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -279,17 +279,17 @@
 
     <TextView
         android:id="@+id/premiumLock"
-        android:layout_width="415dp"
-        android:layout_height="434dp"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
         android:focusable="true"
         android:foreground="@drawable/icon"
         android:foregroundTint="#3C000000"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/sleepText"
+        app:layout_constraintBottom_toBottomOf="@+id/cicadasText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trafficText"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintTop_toTopOf="@+id/cicadasSet"
+        app:layout_constraintVertical_bias="0.6" />
 
     <TextView
         android:id="@+id/sleepText"
@@ -297,7 +297,7 @@
         android:layout_height="36dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="sleep timer"
+        android:text="@string/sleep_timer"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -325,6 +325,7 @@
         android:id="@+id/startSet"
         android:layout_width="55dp"
         android:layout_height="55dp"
+        android:contentDescription="Exit settings menu"
         android:clickable="true"
         android:focusable="true"
         android:foreground="@drawable/settings"
@@ -339,7 +340,8 @@
         android:id="@+id/tick"
         android:layout_width="37dp"
         android:layout_height="35dp"
-        android:clickable="true"
+        android:clickable="false"
+        android:contentDescription="@string/tick_or_cross_depending_on_sound_selection"
         android:focusable="true"
         android:foreground="@drawable/tick"
         app:layout_constraintBottom_toBottomOf="@+id/thunderSet"
